test: layer at-rule

--- a/test/fixtures/minimizerOptions/discardEmpty.css
+++ b/test/fixtures/minimizerOptions/discardEmpty.css
@@ -1,6 +1,19 @@
+@layer ui-components, foo-bar;
+
 body {
   color: red;
 }
 
 a {
+}
+
+.foo {
+  color: black;
+
+  & .class {
+    color: white;
+  }
+}
+
+@layer ui-components {
 }
